[package]
name = "egui-dropdown"
description = "An actual dropdown list for egui"
version = "0.13.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/ItsEthra/egui-dropdown"
authors = ["ItsEthra"]
readme = "README.md"
exclude = ["/examples", "/media"]

[dependencies]
egui = { version = "0.31", default-features = false }
egui_chip = "0.2.0"

[dev-dependencies]
eframe = "0.31"
