[package]
name = "egui-dropdown"
description = "An actual dropdown list for egui"
version = "0.13.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/ItsEthra/egui-dropdown"
authors = ["ItsEthra"]
readme = "README.md"
exclude = ["/examples", "/media"]

[dependencies]
egui = { version = "0.33", default-features = false }
egui_chip = "0.3.1"

[dev-dependencies]
eframe = "0.33"
